Add fade-out effect on project siblings on hover

--- a/bs-config.json
+++ b/bs-config.json
@@ -1,6 +1,6 @@
 {
     "port": 3001,
-    "files": ["./**/*.{html,htm,css,js}"],
+    "files": ["./**/*.{html,htm,css,scss,js}"],
     "server": {
         "baseDir": "./"
     }
