--- a/.gitignore
+++ b/.gitignore
@@ -163,3 +163,4 @@ $RECYCLE.BIN/
 *.lnk
 
 # End of https://www.toptal.com/developers/gitignore/api/node,windows,react,visualstudiocode
+.vscode/settings.json
